	- [Get/Set]RockBottomDamage
	- [Get/Set]RockBottomTearRange
	- [Get/Set]RockBottomShotSpeed
	- [Get/Set]RockBottomLuck
	- [Get/Set]RevelationCharge
	- GetPlayerHUD
	- [Get/Set]SuplexState
	- [Get/Set]SuplexAimCountdown
	- [Get/Set]SuplexTargetPosition
	- [Get/Set]SuplexLandPosition
	- CreateAfterimage
	- [Add/Get]CandyHeartBonus
	- [Add/Get]SoulLocketBonus
	- GetTearsCap
	- GetStatMultiplier
* EntityFamiliar:
	- IsLilDelirium
	- SetLilDelirium
	- GetRandomWisp
	- GetActiveWeaponEntity
	- GetActiveWeaponNumFired
* EntityConfigEntity:
	- GetDevolvedEntity
* Level:
	- Added overloads for CanPlaceRoom(AtDoor) and FindValidRoomPlacementLocations that accept a RoomShape and DoorMask instead of a RoomConfigRoom.
* PlayerManager:
	- GetRandomCollectibleOwner
	- GetRandomTrinketOwner
* ItemPool:
	- AddCollectible
	- AddTemporaryCollectible
	- RemoveTemporaryCollectible
* ItemConfig_Item:
	- Add/RemoveCustomTag
	- Add/RemoveCustomCacheTag
* HUD:
	- GetStackedStreakSprite
	- GetPlayerStreakSprite
* PlayerHUD:
	- GetIndex
	- GetLayout
* Room:
	- TriggerOutput(RoomEventOutput GroupIdx)
* RoomConfig:
	- AddRooms
* RoomConfigSet:
	- AddRooms
* FXLayers:
	- AddPoopFx(ColorMod Color)
* Weapon:
	- GetMainEntity
		Returns active entity used by weapon (Brimstone - EntityLaser, Mom's Knife -  EntityKnife and etc.)
* CharacterMenu
	- GetPlayerTypeFromCharacterMenuID(int CharacterMenuID, bool Tainted)
		Tainted boolean defaults to current menu if unspecified.
* Players.xml
	- Added support for modded/text trinkets on the "trinket" param (I forgot trinkets existed tbh, lol)
* ModCallbacks:
	- MC_PRE_PLAYER_POCKET_ITEMS_SWAP(EntityPlayer player)
		Triggers when the player swaps their pocket items using the action drop button (even if they are empty).
		Return true to cancel pocket item swap.
	- MC_PRE_TRIGGER_BED_SLEEP_EFFECT(EntityPlayer player)
		Triggers if "SleepFillHP" item overlay sprite's event is triggered, and before the hearts addition is applied.