@@ -31,6 +31,7 @@ Additions:
 	- [Add/Get]SoulLocketBonus
 	- GetTearsCap
 	- GetStatMultiplier
+	- GetSmeltedTrinketDesc
 * EntityFamiliar:
 	- IsLilDelirium
 	- SetLilDelirium
@@ -206,6 +207,7 @@ Modified:
 * EntityPlayer:
 	- DropCollectible now returns the spawned pedestal if one was spawned, as intended 
 	- SwapForgottenForm returns boolean, depending if Forgotten/Soul form was switched or not.
+	- GetSmeltedTrinkets now accepts an optional table parameter, a list of trinket IDs, to use as a filter for better performance
 * Level:
 	- TryPlaceRoom(AtDoor) no longer plays the key unlock sound if a room is created that connects to the player's current room.
 * ImGui:
